--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@radix-ui/themes": "^3.2.1",
     "next": "15.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
