--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^8",
     "eslint-config-next": "15.2.2",
+    "eslint-config-prettier": "^10.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
