--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
-    "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
@@ -23,9 +22,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^8",
-    "eslint-config-next": "15.2.2",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "^15.2.4",
     "eslint-config-prettier": "^10.1.1",
+    "next": "^15.2.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
